# Large-Numbers

./: .gitignore  CMakeLists.txt  LargeNumbers.cpp  LargeNumbers.h  README.md  compute.cpp  main.cpp
LargeNumbers/: CMakeLists.txt
LargeNumbers/MathLib/: CMakeLists.txt
LargeNumbers/MathLib/include/: MagicNums.h
LargeNumbers/sources/: LargeNumbers.cpp
LargeNumbers/test/: CMakeLists.txt  test.cpp
computePi/: CMakeLists.txt  compute.cpp
include/LargeNumbers/: LargeNumbers.h
include/math/: MAGIC_NUMS.h  MathFunctions.h
sources/: CMakeLists.txt
sources/LargeNumbers/: CMakeLists.txt  LargeNumbers.cpp
sources/math/: CMakeLists.txt  MathFunctions.cpp
test/: CMakeLists.txt  sandbox.cpp  test.cpp
